[gd_scene load_steps=3 format=3 uid="uid://4euuhnshhm2a"]

[ext_resource type="Script" uid="uid://7qa3chlelojj" path="res://scene/manager/arena_time_manager.gd" id="1_8edri"]
[ext_resource type="PackedScene" uid="uid://bjvqssei4afw6" path="res://scene/ui/end_screen.tscn" id="2_a7ahu"]

[node name="ArenaTimeManager" type="Node"]
script = ExtResource("1_8edri")
end_screen_scene = ExtResource("2_a7ahu")

[node name="Timer" type="Timer" parent="."]
wait_time = 600.0
one_shot = true
autostart = true

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="DifficultyTimer" to="." method="_on_difficulty_timer_timeout"]
